<resources>
    <string name="app_name">Tickitock</string>
    <string name="welcometext">By Jatin and rK</string>
    <string name="singleplayerbuttontext">Single Player</string>
    <string name="twoplayerbuttontext">Two Players</string>
    <string name="statsbuttontext">Stats</string>
    <string name="supereasybuttontext">Super Easy</string>
    <string name="easybuttontext">Easy</string>
    <string name="bluetoothbuttontext">via Bluetooth</string>
    <string name="samedevicebuttontext">Same Device</string>
    <string name="replay">Play Again</string>
    <string name="exit">Back to Menu</string>
    <string name="pl1">Player 1</string>
    <string name="pl2">Player 2</string>
    <string name="pl1forsingleplayer">You</string>
    <string name="pl2forsingleplayer">Bot</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="SEMode"><u>Super Easy Mode</u></string>
    <string name="EMode"><u>Easy Mode</u></string>
    <string name="SEWins">Wins</string>
    <string name="SELoses">Loses</string>
    <string name="SEDraws">Draws</string>
    <string name="sps">Single Player Stats</string>
    <string name="dps">Two Player Stats</string>
    <string name="title_activity_stats2">StatsActivity2</string>
    <string name="SDMode"><u>2p Same Device</u></string>
    <string name="SDWins">Player1</string>
    <string name="SDLoses">Player2</string>
    <string name="ListViewTitle">Select Player Two</string>
</resources>
