<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.productions.rk.tickitock.StatsActivity2"
    tools:showIn="@layout/activity_stats2">
    <TextView
        android:id="@+id/sameDeviceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SDMode"
        android:textColor="#000"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SEModeLinearLayout1"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/sameDeviceTitle">
    <TextView
        android:id="@+id/SDWin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SDWins"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="23sp"
        />
    <TextView
        android:id="@+id/SDLoses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SDLoses"
        android:gravity="center"
        android:textColor="#000"
        android:layout_marginLeft="20dp"
        android:textSize="23sp"
        />
    <TextView
        android:id="@+id/SDDraws"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SEDraws"
        android:textColor="#000"
        android:layout_marginLeft="20dp"
        android:textSize="23sp"
        android:gravity="center"
        />
    </LinearLayout>

</RelativeLayout>
