<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.productions.rk.tickitock.OptionScreen">

    <Button
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:text="@string/singleplayerbuttontext"
        android:textSize="25sp"
        android:id="@+id/singleplayerbutton"
        android:background="@drawable/buttonshape"
        android:layout_above="@+id/twoplayerbutton"
        android:layout_marginBottom="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp" />

    <Button
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:text="@string/twoplayerbuttontext"
        android:textSize="25sp"
        android:background="@drawable/buttonshape"
        android:id="@+id/twoplayerbutton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:text="@string/statsbuttontext"
        android:textSize="25sp"
        android:id="@+id/statsbutton"
        android:background="@drawable/buttonshape"
        android:layout_below="@+id/twoplayerbutton"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp" />

</RelativeLayout>
